--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"Arafat6996.aternos.me:34266","name":"noobdaabhay","port":"34266"}
+{"ip":"Arafat6996.aternos.me","name":"noobdaabhay","port":"34266"}
